--- a/localisation/log.txt
+++ b/localisation/log.txt
@@ -1295,6 +1295,7 @@ Marked: FR.csv (992): String_FR_FALLBACK_GetReligiousGroupMascFem
 Marked: FR.csv (993): String_FR_FALLBACK_GetReligiousPersonMascFem 
 Marked: FR.csv (994): String_FR_FALLBACK_GetTrueReligionHighGodDuDelaDes 
 Marked: FR.csv (995): String_FR_FALLBACK_GetTrueReligionScriptureNameDuDelaDes 
+Marked: India.csv (235): PROV1348 
 Marked: JadeDragon.csv (0): NOT_INTERESTED_IN_ANY_SOCIETY_TRIGGER 
 Marked: JadeDragon.csv (1): INTERESTED_IN_ANY_SOCIETY_TRIGGER 
 Marked: JadeDragon.csv (2): reprimanded_merchants 
@@ -12112,29 +12113,21 @@ Marked: MonksAndMystics.csv (6074): secret_religious_society_zikri_leader_desc
 Marked: MonksAndMystics.csv (6075): secret_religious_society_zun_pagan_leader_desc 
 Marked: MonksAndMystics.csv (6076): temple_baron_female_christian 
 Marked: MonksAndMystics.csv (6077): String_spahis 
-Marked: SwordOfIslam.csv (158): EVTTOOLTIP3731 
-Marked: SwordOfIslam.csv (194): EVTDESC30110 
-Marked: SwordOfIslam.csv (218): EVTDESC75005 
-Marked: SwordOfIslam.csv (223): EVTTOOLTIP3412 
-Marked: SwordOfIslam.csv (252): EVTDESC3010 
-Marked: SwordOfIslam.csv (270): EVTOPTB3243 
-Marked: SwordOfIslam.csv (271): EVTOPTA3245 
-Marked: SwordOfIslam.csv (272): EVTOPTB3245 
-Marked: SwordOfIslam.csv (273): EVTOPTA3246 
-Marked: SwordOfIslam.csv (274): EVTOPTB3246 
-Marked: SwordOfIslam.csv (275): EVTOPTA3247 
-Marked: SwordOfIslam.csv (276): EVTOPTB3247 
-Marked: SwordOfIslam.csv (280): EVTDESC20032 
-Marked: SwordOfIslam.csv (282): EVTDESC20034 
-Marked: SwordOfIslam.csv (293): EVTDESC20172 
-Marked: SwordOfIslam.csv (375): action_charity_desc 
-Marked: SwordOfIslam.csv (419): EVTDESC38299 
-Marked: SwordOfIslam.csv (549): EVTDESC20051 
-Marked: SwordOfIslam.csv (555): EVTDESC39501 
-Marked: SwordOfIslam.csv (575): EVTDESC105037 
-Marked: SwordOfIslam.csv (1063): vassal_fatwa_decision_desc 
-Marked: SwordOfIslam.csv (1064): EVTTOOLTIP88750 
-Marked: SwordOfIslam.csv (1203): EVTDESC88754 
+Marked: ReapersDue.csv (227): death_text_patient 
+Marked: ReapersDue.csv (357): RULE_EPIDEMICS 
+Marked: ReapersDue.csv (1008): EVTDESC_RIP_11046_RASH_2 
+Marked: ReapersDue.csv (1395): EVTDSC_RIP_13203_crazy_courtier 
+Marked: ReapersDue.csv (1827): EVTDSC_RIP_21009 
+Marked: ReapersDue.csv (1841): EVTDSC_RIP_21011 
+Marked: ReapersDue.csv (1890): EVTDSC_RIP_21202_A 
+Marked: ReapersDue.csv (1915): EVTDSC_RIP_21214_A 
+Marked: ReapersDue.csv (2972): GAME_RULES_RESET_VALUES 
+Marked: ReapersDue.csv (3027): EVTDESC_RIP_4501 
+Marked: ReapersDue.csv (3047): EVTDESC_RIP_4520 
+Marked: ReapersDue.csv (3148): stop_pillage_settlement_desc 
+Marked: ReapersDue.csv (3156): EVTDESC_HL_4814 
+Marked: ReapersDue.csv (3361): heir_text_piety 
+Marked: ReapersDue.csv (3516): RULE_MINOR_EPIDEMICS 
 Marked: text1.csv (372): PROVINCE_DOES_NOT_HAVE_DISEASE 
 Marked: text1.csv (374): PROVINCE_DOES_NOT_HAVE_ANY_DISEASE 
 Marked: text1.csv (533): CHANGECULTUREEFFECT 
