--- a/localisation/log.txt
+++ b/localisation/log.txt
@@ -5767,6 +5767,7 @@ Marked: MonksAndMystics.csv (1015): hunt_platypus_DESC
 Marked: MonksAndMystics.csv (1016): hunt_platypus_TOOLTIP 
 Marked: MonksAndMystics.csv (1017): convert_to_liege_culture_on_liege 
 Marked: MonksAndMystics.csv (1018): convert_to_liege_culture_on_liege_named 
+Marked: MonksAndMystics.csv (1019): gov_aztec_empire 
 Marked: MonksAndMystics.csv (1020): AIREASON_STATIC_BACKER 
 Marked: MonksAndMystics.csv (1021): SOCIETIES_VIEW_MEMBER_SCORE_TITLE 
 Marked: MonksAndMystics.csv (1022): MEMBER_SCORE_FROM_ATTRIBUTE 
@@ -10815,32 +10816,6 @@ Marked: MonksAndMystics.csv (6074): secret_religious_society_zikri_leader_desc
 Marked: MonksAndMystics.csv (6075): secret_religious_society_zun_pagan_leader_desc 
 Marked: MonksAndMystics.csv (6076): temple_baron_female_christian 
 Marked: MonksAndMystics.csv (6077): String_spahis 
-Marked: text2.csv (285): LOAD_OLD_SAVE_TITLE 
-Marked: text2.csv (286): LOAD_OLD_SAVE_DESC 
-Marked: text2.csv (637): EVTDESC39404 
-Marked: text2.csv (814): EVTDESC38288 
-Marked: text2.csv (817): EVTDESC38290 
-Marked: text2.csv (878): EVTDESC38291 
-Marked: text2.csv (1228): EVTDESC38295 
-Marked: text2.csv (1229): EVTDESC38296 
-Marked: text2.csv (1310): EVTDESC38297 
-Marked: text2.csv (1311): EVTDESC38298 
-Marked: text2.csv (1312): EVTDESC38300 
-Marked: text3.csv (91): ASSAULT_DESC 
-Marked: text3.csv (122): DEFENDER_LEVY 
-Marked: text3.csv (123): DEFENDER_GARRISON 
-Marked: text3.csv (287): EVTDESC38301 
-Marked: text3.csv (387): EVTDESC38302 
-Marked: text3.csv (424): CURRENT_TAX 
-Marked: text8.csv (499): EVTDESC38303 
-Marked: text8.csv (601): EVTDESC100071 
-Marked: text8.csv (835): EVTDESC100201 
-Marked: text8.csv (907): EVTTOOLTIP100231 
-Marked: text8.csv (908): EVTOPTB100230 
-Marked: text8.csv (1106): EVTDESC100451 
-Marked: text8.csv (1225): action_inquisition_desc 
-Marked: text8.csv (1226): action_advance_cul_tech_desc 
-Marked: text8.csv (1227): action_improve_rel_relations_desc 
 Marked: v1_06.csv (553): d_hashshashin 
 Marked: v1_06.csv (690): EVTDESC38304 
 Marked: v1_07.csv (90): EVTDESC8076 
