--- a/localisation/text2.csv
+++ b/localisation/text2.csv
@@ -283,8 +283,8 @@ WAR_INVALID_SETUP;у╫уЫнчп╖╩╞;;;;;;;;;;X
 CANNOT_DISBAND_IN_COMBAT;╖R(тзу╫╤╥жп╡╩дэ╠╩╫Би╒)╖!;;;;;;;;;;X
 plot_gain_title_title;╩Ях║ [This.GetFullName];;;;;;;;;;X
 plot_gain_title_desc;[From.GetBestName] уЩтзцэд╠╪ф╩╝Ёин╙ [This.GetFullName].;;;;;;;;;;X
-LOAD_OLD_SAVE_TITLE;Old Save Warning;;;;;;;;;;X
-LOAD_OLD_SAVE_DESC;The selected savegame is from version: $VERSION$, the current version is: $CURRVERSION$. \nLoading this file could result in odd behavior and even crashes. Load anyway?;;;;;;;;;;X
+LOAD_OLD_SAVE_TITLE;╬и╢Ф╣╣╬╞╦Ф;;;;;;;;;;X
+LOAD_OLD_SAVE_DESC;дЦя║тЯ╣д╢Ф╣╣йг╩Ысз$VERSION$╟Ф╠╬,╣╠г╟╟Ф╠╬йг$VERSION$.\n╤ах║╢к╢Ф╣╣©идэ╣╪жбфФ╧ж╣дппн╙иУжа╠ююё.р╩╤╗р╙╤ах║бП?;;;;;;;;;;X
 UNKNOWN;н╢ж╙;;;;;;;;;;X
 EVTDESC4075;╫ЯлЛмЙх╚ц╩спйу╩Я, нр╨мнр╣д©мхкцг╤х╧Щакр╩╢н╨анчрБрЕ╣дАВат, ╬мтзнрн╙╢каЁ╨Л╣дй╠╨РатЁ║╧эюМхк╦Фкънрр╩╢╕б╧т╥.;;;;;;;;;;X
 EVTDESC4105;╦Вжж╦ВяЫ╣друхкю╢╣╫ак [Root.Location.GetName] ╣дод╪╬╪╞йп.р╩уС╩╤п╕╢╚ю╢,╟янр╣дв╒рБа╕рЩ╣╪акр╩Ё║хке╪о╥╠Мящжп, ╧шжзцгуЩтз╠ъ╢Сп╕╠П©Я╢╣©зиз. ©╢акр╩╩А╤Ыж╝╨С, нр╥╒ожфДжпр╩╦Ж╫ги╚ящ╣ц╬мйгнр!;;;;;;;;;;X
@@ -812,10 +812,10 @@ EVTOPTA3559;нрйэ╧╩ак!;;;;;;;;;;X
 EVTOPTB3559;н╙й╡ц╢[Root.Spouse.GetFirstName]╡╩╟яц╣╧Е╦Ьнр?;;;;;;;;;;X
 EVTOPTC3559;уБ╨эикхкё╛╣╚йг[Root.Spouse.GetSheHe] ╡╒╡╩хон╙уБйг╟╝гИпенОё╛нроёмШ...;;;;;;;;;;X
 EVTDESC38188;[FromFrom.GetTitledFirstName] й╖х╔акхкиЗ╣дюжх╓. [FromFrom.GetSheHeCap] ╣ц╣╫ак╬зи╔оШЁальжй.;;;;;;;;;;X
-EVTDESC38288;нрй╖х╔акхкиЗ╣дюжх╓.нр╣ц╣╫ак╬зи╔оШЁальжй.;;;;;;;;;;X
+EVTDESC38288;нрй╖х╔акхкиЗ╣дюжх╓.нр╣ц╣╫ак╖Y╬зи╔оШЁа╖!льжй.;;;;;;;;;;X
 EVTDESC38289;нр©и╟╝╣д╩╗т╟╡╩ты╦Ьнр╢Ью╢╩╤юж.нрй╖х╔акт╟╤║льжй.;;;;;;;;;;X
 EVTDESC38190;[FromFrom.GetTitledFirstName]м╥лшдтхх. [FromFrom.GetSheHeCap] ╣ц╣╫акиЗ╡║льжй.;;;;;;;;;;X
-EVTDESC38290;нр╦п╬У╡╩л╚╨ц.нриЗ╡║ак.;;;;;;;;;;X
+EVTDESC38290;нр╦п╬У╡╩л╚╨ц.нр╖YиЗ╡║╖!ак.;;;;;;;;;;X
 EVTDESC74050;нрряобаНтз[Root.Capital.GetName]╬ы╟Лр╩Ё║од╪╬╪╞йп!;;;;;;;;;;X
 EVTOPTA3568;хГ╧Шр╙гС╠Пхк╟ОжЗнрё╛©идэ╩А╦Эхщрвх╔ЁЩкЭ;;;;;;;;;;X
 EVTOPTB3568;нр╫╚р╙гСнр╣д╨╒вс╟ОжЗнр;;;;;;;;;;X
@@ -876,7 +876,7 @@ EVTOPTC3657;[From.GetTitledFirstName]╤тнр╨эиЗфЬ!;;;;;;;;;;X
 EVTDESC3607;╧ш©╢[From.GetTitledFirstName]тзр╩╦Жпб╫Э╡╤╩Я╣деям╫иМиоу╧й╬[From.GetHerHis]╪╪дэйгр╩╪Ч╪х©ж╡юсжаНхксДтц╣дйб.тзу╧й╬мЙ[From.GetSheHe]дэтзхккюг╟н╙фДй╘╪с╤Юц╢╢С╣дм╢©Ю╨Сё╛[From.GetSheHe]╫лнртУяЫжфтЛвН╢С╣дм╢©Ю╨мик╨╕ё╛х╢дэхцйэ╨╕уъ╪лпЬ╩Н╪╦лЛё╛иУжа╪╦жэ.;;;;;;;;;;X
 EVTOPTB3610;╡Бйтм╜её╣д╨ц╩З╩А!;;;;;;;;;;X
 EVTOPTC3610;нр╣╫╣втУц╢акё©уБ╡╩йгнр!;;;;;;;;;;X
-EVTDESC38291;нр╡╩тыушд╔фДкШхкё╛нчбшт╜рРн╙╨н.нрй╖х╔ак©Аплльжй.;;;;;;;;;;X
+EVTDESC38291;нр╡╩тыушд╔фДкШхкё╛нчбшт╜рРн╙╨н.нрй╖х╔ак╖Y©Апл╖!льжй.;;;;;;;;;;X
 EVTOPTC3611;╡╩ё╛╡╩ё╛╡╩р╙сцм╜её!;;;;;;;;;;X
 EVTOPTD3611;м╜еёр╡╡╩дэхцнруп╧╘!;;;;;;;;;;X
 EVTOPTB3615;║╜║╜р╡пМнрцгс╕╦цлжбш╡╩дгц╢я╙пх╣дпкх╓;;;;;;;;;;X
@@ -1226,8 +1226,8 @@ LEDGER_OUR_POSITION;нрцг╣д╣ьн╩;;;;;;;;;;X
 LEDGER_CURRENT_HEIR;╪лЁпхк;;;;;;;;;;X
 LEDGER_CLAIMANTS;пШЁфуъ;;;;;;;;;;X
 UPGRADING;иЩ╪╤жп;;;;;;;;;;X
-EVTDESC38295;нр╥╒ож╨м╠Пхк╫╩л╦тыр╡╡╩╩Ачочнакё╛нрря╬╜╡╩ты╨╕пъак.;;;;;;;;;;X
-EVTDESC38296;нртыр╡╡╩н╥╬ЕуБ╦Жйю╫Гакё╛нрс╣╠╖кЩё╛нрожтз╦п╣╫ак╟╡х╚.нртыр╡╡╩╩А╣╗гсак.;;;;;;;;;;X
+EVTDESC38295;нр╥╒ож╨м╠Пхк╫╩л╦тыр╡╡╩╩Ачочнакё╛нрря╬╜╡╩ты ╖Y╨╕пъ╖!ак.;;;;;;;;;;X
+EVTDESC38296;нртыр╡╡╩н╥╬ЕуБ╦Жйю╫Гакё╛нрс╣╠╖кЩё╛нрожтз╦п╣╫ак╟╡х╚.нртыр╡╡╩╩А╖Y╣╗гс╖!ак.;;;;;;;;;;X
 EVTDESC78000;нр╣др╩╦Ж╠╩╪Ю╩╓хк╠╖т╧нр╣д╧╛м╒йг╦ЖтЭтЭё╛жаиы╠хфПуБ╪р╩О╦╦гв╣д╧╛м╒ю╢к╣.;;;;;;;;;;X
 EVTOPTA78000;Ё╒йт╦диф╧╛м╒гИ©Жртх║тцуБ╦Ж╨╒вс;;;;;;;;;;X
 EVTOPTB78000;╤тсз[Root.GetTitle]ю╢к╣ё╛нр╣д╧╛м╒ц╩й╡ц╢ж╣╣цпъЁэ╣д!;;;;;;;;;;X
@@ -1308,9 +1308,9 @@ EVTDESC3725;нрхон╙нрйг╦Ж©М╨Й╢Са©╣дхкё╛╣╚нрсКфмхк╫╩л╦╠Д╣цю╖дяак.м╒Ё╪╨эотх╩╡╩хон╙[
 EVTOPTA3725;хцкШцг╪Ш╧Мх╔╟и!;;;;;;;;;;X
 EVTOPTB3725;╨ц╟иё╛нр╡╩╩АтысКфмхк╫╩л╦ак;;;;;;;;;;X
 EVTOPTC3725;м╒Ё╪╡╩ж╙╣юй╡ц╢...;;;;;;;;;;X
-EVTDESC38297;хкцг╡╩тыоЯртг╟дгяЫнЭрЩвенрё╛нр╡╩тывт╥╒©╙й╪╫╩л╦ак.нрй╖х╔ак╨ох╨льжй;;;;;;;;;;X
-EVTDESC38298;бЯм╥╧╓вВ╡╒пюимдЦ╣де╛а╕╣дЁи╬мйг╨эспюжх╓╣дйб.нрй╖х╔акюа╤Хльжй.;;;;;;;;;;X
-EVTDESC38300;йю╫Гиовэйгспхкж╣╣цнрвП╬╢.нрй╖х╔ак╫╬╟альжй.;;;;;;;;;;X
+EVTDESC38297;хкцг╡╩тыоЯртг╟дгяЫнЭрЩвенрё╛нр╡╩тывт╥╒©╙й╪╫╩л╦ак.нрй╖х╔ак╖Y╨ох╨╖!льжй;;;;;;;;;;X
+EVTDESC38298;бЯм╥╧╓вВ╡╒пюимдЦ╣де╛а╕╣дЁи╬мйг╨эспюжх╓╣дйб.нрй╖х╔ак╖Yюа╤Х╖!льжй.;;;;;;;;;;X
+EVTDESC38300;йю╫Гиовэйгспхкж╣╣цнрвП╬╢.нрй╖х╔ак╖Y╫╬╟а╖!льжй.;;;;;;;;;;X
 opinion_killed_merrymen;и╠кюблаж╨ц╨╨╣дйваЛ;;;;;;;;;;X
 opinion_ignored_merrymen;нчйсблаж╨ц╨╨;;;;;;;;;;X
 modifier_outfoxed;╠╩блаж╨ц╨╨жгй╓;;;;;;;;;;X
