--- a/localisation/v1_06.csv
+++ b/localisation/v1_06.csv
@@ -551,7 +551,7 @@ c_aukshayts_adj;н╛╤Ше╕к╧;;;;;;;;;;X
 c_sudovia_adj;лью╜©╜;;;;;;;;;;X
 c_jacwiez_adj;╦Ябч╣бе╣;;;;;;;;;;X
 c_byzantion_adj;╬Щй©л╧╤║╠╓;;;;;;;;;;X
-d_hashshashin;╟╒хЬпа;;;;;;;;;;X
+d_hashshashin;м╩╩В╤с;;;;;;;;;;X
 GRANDHEADMASTER;╢СЁ╓юо;;;;;;;;;;X
 GRANDHEADMASTER_FOA;╦Соб;;;;;;;;;;X
 DEATH_MURDER_HASHSHASHIN;кюсз╟╒хЬпаж╝йж;;;;;;;;;;X
@@ -688,7 +688,7 @@ SPECIAL_EVENTOPTION_4;уБ╦Жя║оН©исцйгрРн╙дЦ╦ъЁ╛╣д╖Yя╖о╟╖!╪╪дэ;;;;;;;;;;X
 SPECIAL_EVENTOPTION_TRAIT;уБ╦Жя║оН©исцйгрРн╙дЦсп╖Y$TRAITNAME$╖!льжй;;;;;;;;;;X
 DECADENCE_TITLE;╪рвЕ╦╞╩╞;;;;;;;;;;X
 COMBAT_MODIFIER_DESC;╖Yу╫╤╥пчуЩ╖!\nпчуЩ╢кхкбйаЛ╬Э╤с╣да╫рМ\n\n;;;;;;;;;;X
-EVTDESC38304;уБп╘иЫрТ╤тнр╣мсО, хцнрх╔вЖй╡ц╢... ©иеб╣д, кШцгхцнрх╔вЖ©иеб╣дйб... нр╣ц╣╫ак╥Хвс╣дльжй.;;;;;;;;;;X
+EVTDESC38304;уБп╘иЫрТ╤тнр╣мсО, хцнрх╔вЖй╡ц╢... ©иеб╣д, кШцгхцнрх╔вЖ©иеб╣дйб... нр╣ц╣╫ак╖Y╥Хвс╖!╣дльжй.;;;;;;;;;;X
 architect_improvements;йво╞╪э╧╧╦д╫Ь;;;;;;;;;;X
 EVTNAME89500;бМ©и╡╗бчсн╪г;;;;;;;;;;X
 EVTDESC89500;╬╜╧ЩакйЩдЙ╨м╦╦гвсКйЕ╦╦тзт╤╤╚╣дснюЗ, мЧдАк╧илхкбМ©и╡╗бчжусз╩ь╣╫аке╥жч. бцЁл╣д╪гб╪╠╩п╢Ёир╩╠╬╫п"бМ©и╡╗бчсн╪г"╣дйИЁЖ╟Фак. йИюОцХ╩Факрёт╤ма╣ьио╣дфУ╣╓╨мбЫвс, ╦Ь╤ауъцглА╧╘аке╥жчртмБйю╫Г╣д╬╙╨Хр╩фЁ, ╣╚йгр╡спхкхон╙уШ╦Ж╧ййбйгдСтЛ╣д;;;;;;;;;;X
